examples/datalog/12_errors/32_aggregation_in_head_error.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_agg_err
Knowledge graph 'test_agg_err' created.
Switched to knowledge graph: test_agg_err
> .kg use test_agg_err
Switched to knowledge graph: test_agg_err
> +nums[(1,), (2,), (3,)].
Inserted 3 fact(s) into 'nums'.
> total(<SUM:X>) :- nums(X).
Script error: Parse error: Unknown aggregate function: 
